--- a/src/style/timer.css
+++ b/src/style/timer.css
@@ -1,6 +1,7 @@
 #time-left {
 	font-family: digital-7, cursive;
 	font-size: 80px;
+	color: #2cee04;
 }
 #timer-label {
 	font-family: "Bangers", cursive;
